bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bridge-service
  namespace: todo-app
spec:
  selector:
    serving.knative.dev/service: mern-backend-rps
  ports:
  - port: 80
    targetPort: 8012
