mern-backend-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend-bridge
  namespace: todo-app
spec:
  selector:
    serving.knative.dev/service: mern-backend
  ports:
  - port: 80
    targetPort: 8012
